tests/ecc-aws-560-security_group_without_tag_information/placebo-green/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "560_security_group_green",
                "IpPermissions": [],
                "OwnerId": "111111111111",
                "GroupId": "sg-1234567asdfg",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-560-security_group_without_tag_information"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    }
                ],
                "VpcId": "vpc-12345asdfg"
            }
        ],
        "ResponseMetadata": {}
    }
}
